[package]
name = "tetsu-anidb"
version = "0.1.0"
authors = ["Sam Lakerveld <dark@dark.red>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
log = "0.4.11"
md4 = "0.9.0"
memmap = "0.7.0"
pretty_env_logger = "0.4.0"
ranidb = { path = "../ranidb" }
rayon = "1.5.0"
rusqlite = "0.24.2"
serde_json = "1.0"
structopt = "0.3"
tokio-util = { version = "0.5.1", features = [ "codec" ] }
tokio = { version = "0.3.6", features = [ "full" ] }
